--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="equipe.html">Equipe</a></li>
-					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
+					<li><a href="#" target="_blank">Loja</a></li>
 					<li><a href="http://suporte.my-board.org/" target="_blank">Suporte</a></li>
 				</ul>
 		</div>
@@ -39,7 +39,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>Venha jogar conosco, <b><span class="ip">jogar.megacraft.com.br</span></b> e com mais outros <span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p>
+				<p>Venha jogar conosco, <b><span class="ip">us-3.purplehost.com.br:10039</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 		</div>
 		</header>
 		<div class="main-content">
