--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<h2>Sobre nós</h2>
 			<p class="about-text">Venha jogar minecraft no modo sobrevivência com elementos de RPG e com vários outros jogadores! Sobreviva, desafie, faça épicas construções, dome animais, derrote Chefões Épicos, trabalhe, fique rico, case-se e muito mais!<br />
 			Jogue um modo sobrevivência como você nunca viu antes! Nós estamos mudando a cada dia para trazer o melhor para nossos jogadores.
-			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">jogar.megacraft.com.br</span></b></p>
+			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">us-3.purplehost.com.br:10039</span></b></p>
 		</div>
 		<div class="gradient">
 			<div class="flex-container">
