--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 		<div class="gradient">
 			<div class="flex-container">
 				<div class="split">
-					<a href="https://discord.megacraft.com.br" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
+					<a href="#" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
 					<p>Entre para o nosso servidor do discord, tire as suas dúvidas, reporte bugs, veja as novidades, faça amigos, crie equipes, bata um papo com a galera e muito mais outras coisas, te esperamos!</p>
 				</div>
 				<div class="split">
-					<a href="https://loja.megacraft.com.br" target="_blank"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
+					<a href="#" target="_blank"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
 					<p>Aqui você pode doar para o servidor e em troca receber diversas recompensas como ranks, itens e outros benefícios. Sua ajuda é muito importante pois faz com que o servidor se mantenha online!</p>
 				</div>
 				<div class="split">
