--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="equipe.html">Equipe</a></li>
-					<li><a href="#" target="_blank">Loja</a></li>
+					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
 					<li><a href="http://suporte.my-board.org/" target="_blank">Suporte</a></li>
 				</ul>
 		</div>
@@ -39,23 +39,23 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>Venha jogar conosco, <b><span class="ip">us-3.purplehost.com.br:10039</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
+				<p>Venha jogar conosco, <b><span class="ip">jogar.megacraft.com.br</span></b> e com mais outros <span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p>
 		</div>
 		</header>
 		<div class="main-content">
 			<h2>Sobre nós</h2>
 			<p class="about-text">Venha jogar minecraft no modo sobrevivência com elementos de RPG e com vários outros jogadores! Sobreviva, desafie, faça épicas construções, dome animais, derrote Chefões Épicos, trabalhe, fique rico, case-se e muito mais!<br />
 			Jogue um modo sobrevivência como você nunca viu antes! Nós estamos mudando a cada dia para trazer o melhor para nossos jogadores.
-			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">us-3.purplehost.com.br:10039</span></b></p>
+			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">jogar.megacraft.com.br</span></b></p>
 		</div>
 		<div class="gradient">
 			<div class="flex-container">
 				<div class="split">
-					<a href="#" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
+					<a href="https://discord.megacraft.com.br" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
 					<p>Entre para o nosso servidor do discord, tire as suas dúvidas, reporte bugs, veja as novidades, faça amigos, crie equipes, bata um papo com a galera e muito mais outras coisas, te esperamos!</p>
 				</div>
 				<div class="split">
-					<a href="#" target="_blank"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
+					<a href="https://loja.megacraft.com.br" target="_blank"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
 					<p>Aqui você pode doar para o servidor e em troca receber diversas recompensas como ranks, itens e outros benefícios. Sua ajuda é muito importante pois faz com que o servidor se mantenha online!</p>
 				</div>
 				<div class="split">
