--- a/index.html
+++ b/index.html
@@ -71,27 +71,27 @@
 			<div class="vote-container">
 				<div class="vote">
 					<h2>MinecraftServers.net</h2>
-					<a href="https://bit.ly/votarmc1" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>TopG.org</h2>
-					<a href="https://bit.ly/votarmc5" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>Minecraft-MP.com</h2>
-					<a href="https://bit.ly/votarmc3" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>Minecraft-MP.com</h2>
-					<a href="https://bit.ly/votarmc2"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="#"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>TopMinecraftServers.org</h2>
-					<a href="https://bit.ly/votarmc4"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="#"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>McCommunity.net</h2>
-					<a href="https://bit.ly/votarmc6"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="#"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 			</div>
 		</div>
@@ -107,7 +107,7 @@
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
-	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
+	<a href="#" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
 		<br /><br /><br /><br /><br />
