--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="gradient">
 			<div class="flex-container">
 				<div class="split">
-					<a href="#" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
+					<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
 					<p>Entre para o nosso servidor do discord, tire as suas dúvidas, reporte bugs, veja as novidades, faça amigos, crie equipes, bata um papo com a galera e muito mais outras coisas, te esperamos!</p>
 				</div>
 				<div class="split">
