--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>Venha jogar conosco, <b><span class="ip">jogar.megacraft.com.br</span></b> e com mais outros <span data-playercounter-ip="144.217.10.143:25959">0</span> jogadores online.</p>
+				<p>Venha jogar conosco, <b><span class="ip">jogar.megacraft.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039
+
+">0</span> jogadores online.</p>
 		</div>
 		</header>
 		<div class="main-content">
