--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li><a href="http://suporte.my-board.org/" target="_blank">Suporte</a></li>
 				</ul>
 		</div>
-			<h1 class="animate">ESTAMOS VOLTANDO! \0/</h1>
+			<h1 class="animate">ESTAMOS DE VOLTA! \0/</h1>
 			<h1 class="animate">Bem vindos ao MegaCraft Server!</h1>
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
