--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li><a href="/">Home</a></li>
 					<li><a href="equipe.html">Equipe</a></li>
 					<li><a href="#" target="_blank">Loja</a></li>
-					<li><a href="http://suporte.my-board.org/" target="_blank">Suporte</a></li>
+					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
 				</ul>
 		</div>
 			<h1 class="animate">ESTAMOS DE VOLTA! \0/</h1>
@@ -56,14 +56,17 @@
 				<div class="split">
 					<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
 					<p>Entre para o nosso servidor do discord, tire as suas dúvidas, reporte bugs, veja as novidades, faça amigos, crie equipes, bata um papo com a galera e muito mais outras coisas, te esperamos!</p>
+					<p><a href="https://discord.gg/JNRCCebDmB" target="_blank">CLIQUE AQUI</a></p>
 				</div>
 				<div class="split">
 					<a href="#" target="_blank"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
 					<p>Aqui você pode doar para o servidor e em troca receber diversas recompensas como ranks, itens e outros benefícios. Sua ajuda é muito importante pois faz com que o servidor se mantenha online!</p>
+					<p><a href="#" target="_blank">CLIQUE AQUI</a></p>
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
 					<p>Vote no servidor, leva somente uns minutinhos, ao votar você ajuda muito o servidor a crescer e ter mais jogadores, pois para mantermos o servidor online temos altos custos de manutenção.</p>
+					<p><a href="#" target="_blank">CLIQUE AQUI</a></p>
 				</div>
 			</div>
 		</div>
@@ -124,7 +127,7 @@
 		<quote><small><b>IMPORTANTE</b><br />
 		O servidor MegaCraft não é de forma alguma afiliado à Mojang, AB. Nem deve ser considerada uma empresa endossada pela Mojang, AB.<br />
 		Quaisquer contribuições ou compras feitas do servidor vão para a Equipe de Desenvolvimento MegaCraft.<br />
-		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em <a href="http://suporte.my-board.org" style="color: #191970" target="_blank">http://suporte.my-board.org</a>.<br />
+		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em <a href="https://discord.gg/JNRCCebDmB" style="color: #191970" target="_blank">http://suporte.my-board.org</a>.<br />
 		Minecraft ® / TM & © 2009-2020 Mojang / Notch<br /></small></quote>
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
