--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>Venha jogar conosco, <b><span class="ip">jogar.megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039
+				<p>Venha jogar conosco, <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039
 
 ">0</span> jogadores online.</p>
 		</div>
@@ -49,7 +49,7 @@
 			<h2>Sobre nós</h2>
 			<p class="about-text">Venha jogar minecraft no modo sobrevivência e com vários outros jogadores! Sobreviva, desafie, faça construções épicas, trabalhe, fique rico e muito mais!<br />
 			Jogue um modo sobrevivência como você nunca viu antes! Nós estamos mudando a cada dia para trazer o melhor para nossos jogadores.
-			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">jogar.megacraftmc.com.br</span></b></p>
+			Junte-se a nós! :)<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">megacraftmc.com.br</span></b></p>
 		</div>
 		<div class="gradient">
 			<div class="flex-container">
