--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</ul>
 		</div>
 			<h1 class="animate">ESTAMOS DE VOLTA! \0/</h1>
-			<h1 class="animate">Bem vindos ao MegaCraft Server!</h1>
+			<h1 class="animate">Bem vindos ao Servidor <b>MegaCraft</b>!</h1>
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
