--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<li><a href="/">Home</a></li>
 					<li><a href="equipe.html">Equipe</a></li>
 					<li><a href="#" target="_blank">Loja</a></li>
+					<li><a href="regras.html" target="_blank">Regras</a></li>
 					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
 				</ul>
 		</div>
