--- a/equipe.html
+++ b/equipe.html
@@ -29,8 +29,9 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="equipe.html">Equipe</a></li>
-					<li><a href="https://loja.megacraft.com.br" target="_blank">Loja</a></li>
-					<li><a href="http://suporte.my-board.org/" target="_blank">Suporte</a></li>
+					<li><a href="#" target="_blank">Loja</a></li>
+					<li><a href="regras.html" target="_blank">Regras</a></li>
+					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
 				</ul>
 			</div>
 		</header>
