--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="equipe.html">Equipe</a></li>
-					<li><a href="#" target="_blank">Loja</a></li>
-					<li><a href="regras.html" target="_blank">Regras</a></li>
+					<li><a href="loja.html" >Loja</a></li>
+					<li><a href="regras.html" >Regras</a></li>
 					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
 				</ul>
 		</div>
