--- a/loja.html
+++ b/loja.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-	<title>Mega Craft - Regras</title>
-	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<title>Mega Craft - Loja</title>
+	<meta name="description" content="Mega Craft Ã© um novo e incrÃ­vel servidor do Minecraft. VocÃª pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Mega Craft - Regras">
 	<meta property="og:site_name" content="Mega Craft">
-	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
+	<meta property="og:description" content="Mega Craft Ã© um novo e incrÃ­vel servidor do Minecraft. VocÃª pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
@@ -38,55 +38,13 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Regas</h1>
-					<h3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</h3>	
+					<h1 class="fade">Loja</h1>
+					<h2>Em breve!</h2>	
 				</div></div><br /><br />
 <div align="left">
-<ol style="font-size: 14px;">
-<li>Respeito a todos, nunca ofenda a ninguém.</li>
-<li>Não fale palavras de baixo calão (Palavrões) no Chat.</li>
-<li>Não é permitido griefar em volta de warps ou outras construções staffs.</li>
-<li>Não arranje tumultos no chat, discutindo com Players/Staffs.</li>
-<li>Não é permitido o uso de skins inadequadas.</li>
-<li>Respeite os novos jogadores, todos possuem os mesmos direitos.</li>
-<li>Não abuse de bugs. Qualquer bug informe a Staff e terá 20k de money como recompensa.</li>
-<li>Não forneça seus dados a ninguém.</li>
-<li>O uso de qualquer modificação que forneça algum tipo de vantagem em jogo para os jogadores não é permitida, assim como modificações que alterem a forma como o jogo envia informações para o servidor. Exemplo de mods permitidos: OptiFine, Minimaps*, Shaders.</li>
-<li>Não faça construções/pixel arts impróprias.</li>
-<li>Proibido Vender/Negociar sua conta do jogo no servidor.</li>
-<li>Não crie contas FAKES, caso descobrirmos será banido.</li>
-<li>Não fique pedindo fly ou outras permissões não cabíveis a você para os staffs.</li>
-<li>Proibido colocar placas de Venda/Compra com a intenção de Roubar/Enganar players colocando pontos, vírgulas ou o ID errado.</li>
-<li>Não divulgue outros servidores, dado o primeiro e segundo avisos, logo baniremos.</li>
-<li>Não use um nick que contenha Números de Telefone/Celular ou Ips/Senhas.</li>
-<li>Quando tirar print, nunca Edite/Corte o seu print. Caso tenha falsificação no print ou no seu vídeo, o mesmo não valerá como prova e serás punido.</li>
-<li>Não se passe por outros jogadores usando nicks parecidos. <em><small>Ex: Verdadeiro - Guarana_BR; Falso - Guarana_RB.</small></em></li>
-<li>Proibido definir casas em terrenos protegidos sem a autorização do dono do terreno.</li>
-<li>Não brinque falando no chat que usa hack. Mesmo sendo brincadeira, poderemos não perceber e poderá acarretar no banimento do mesmo.</li>
-<li>Não use nicks ofensivos ou que contenham palavrões, ofendendo a players e staffs.</li>
-<li>Não perturbe jogadores no servidor. É considerado pertubação ações como não deixar colocar/tirar blocos, bloquear a um jogador de sair de um terreno, fazer spawn kill, etc.</li>
-<li>Proibido usar nicks parecidos com a da staff ou se dizendo staff, serás punido severamente depois do segundo aviso.</li>
-<li>Não faça flood no chat, ou seja, repetindo a mesma mensagem toda hora.</li>
-<li>Não faça spam no chat, ou seja, repetindo a mesma letra de forma excessiva.</li>
-<li>Não use CapsLock em excesso no chat. (Letras Maiúsculas)</li>
-<li>Caso ache uma construção desprotegida com vestígios feitos por um staff, nunca destrua, pois foram blocos pegos do criativo.</li>
-<li>Não seja racista, respeite a todos.</li>
-<li>Nunca trapaceie em eventos.</li>
-<li>Nunca deslogue em eventos a qual os itens são dados de graça.</li>
-<li>Ajudar players que não cumprem as regras não denunciando eles pode levar a grandes punições a você se descobrirmos que está ajudando a esconder.</li>
-<li>Ameaças ao servidor, mesmo sendo brincadeira, poderão acarretar em banimento.</li>
-<li>Nunca tente entrar em contas que não são suas.</li>
-<li>É proibido pedir itens a staff, perturbando os staffs poderá acarretar em punições.</li>
-<li>Não é permitido que um Clan tenha mais de 25 membros.</li>
-<li>Não é permitido definir home de clan dentro de uma casa protegida pela qual o dono não autorizou.</li>
-<li>São proibidas armadilhas em spawns de lojas de jogadores. A responsabilidade é de quem definiu a loja. O descumprimento da regra pode levar à perda do comando.</li>
-<li>Proibido xingar ou ofender jogadores/staff por skype, facebook, twitter ou qualquer outra rede social e dispositivo de comunicação.</li>
-<li>Não é permitido definir terrenos dentro de vilas sem permissão do proprietário.</li>
-<li>Não são permitidos sistemas excessivos de redstone.</li>
-<li>Desempenho de staffs não devem ser discutidos em chat público, somente com os mesmos ou superiores.</li>
-<li>Não é permitido definir terrenos a menos de 10 blocos de distância de outro terreno, salvo com permissão do dono do outro terreno. Também não é permitido colocar ou destruir blocos ao redor de terrenos de forma a prejudicar ou provocar o dono do terreno.</li>
-<li>Qualquer forma de atrapalhar ou impedir um membro da staff de atender um jogador não é permitida.</li>
-</ol>
+<p>
+EM BREVE AQUI OS PRODUTOS DA LOJA DO SERVIDOR
+</p>
 </div><br>
 <br>
 </p>
@@ -94,8 +52,8 @@
 <br>
 <br>
 <br>
-<span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
-<p><small><em>Escrito por TEKCRAFT. Última atualização em 22/09/20.</em></small></p>
+<span class="notification-bar alert alert-danger">Estas regras e observaÃ§Ãµes podem mudar sem aviso prÃ©vio. Fique atento a elas!</span></p>
+<p><small><em>Escrito por TEKCRAFT. Ãšltima atualizaÃ§Ã£o em 22/09/20.</em></small></p>
 <br /><br />
 <br /><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
