--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
 					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Minecraft-MP.com</h2>
-					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<h2>MinecraftList.org</h2>
+					<a href="https://minecraftlist.org/vote/25780" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>Minecraft-MP.com</h2>
-					<a href="#"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="https://minecraft-mp.com/server/294603/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>TopMinecraftServers.org</h2>
-					<a href="#"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="http://topminecraftservers.org/vote/12826"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>McCommunity.net</h2>
