--- a/index.html
+++ b/index.html
@@ -80,10 +80,6 @@
 					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>TopG.org</h2>
-					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
-				</div>
-				<div class="vote">
 					<h2>MinecraftList.org</h2>
 					<a href="https://minecraftlist.org/vote/25780" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
@@ -97,7 +93,7 @@
 				</div>
 				<div class="vote">
 					<h2>McCommunity.net</h2>
-					<a href="#"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 			</div>
 		</div>
