--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</p>
 			<div class="vote-container">
 				<div class="vote">
-					<h2>MinecraftServers.net</h2>
-					<a href="#" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<h2>MinecraftServers.org</h2>
+					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>MinecraftList.org</h2>
