--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 					<br /><p><a href="https://discord.gg/JNRCCebDmB" style="color: #191970"  target="_blank">> CLIQUE AQUI</a></p>
 				</div>
 				<div class="split">
-					<a href="#" target="_blank"><img class="img" src="img/store.png" alt="Image of Store icon"></a>
+					<a href="loja.html" ><img class="img" src="img/store.png" alt="Image of Store icon"></a>
 					<p>Aqui você pode doar para o servidor e em troca receber diversas recompensas como ranks, itens e outros benefícios. Sua ajuda é muito importante pois faz com que o servidor se mantenha online!</p>
-					<br /><p><a href="#" style="color: #191970"  target="_blank">> CLIQUE AQUI</a></p>
+					<br /><p><a href="loja.html" style="color: #191970"  >> CLIQUE AQUI</a></p>
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
