--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="main-content">
 			<h2>Sobre nós</h2>
 			<p class="about-text">Venha jogar minecraft no modo sobrevivência e com vários outros jogadores! Sobreviva, desafie, faça construções épicas, trabalhe, fique rico e muito mais!<br />
-			<br><br>Você pode entrar em nosso servidor com o IP <b><span class="ip">megacraftmc.com.br</span></b></p>
+			<br>Você pode entrar em nosso servidor com o IP <b><span class="ip">megacraftmc.com.br</span></b></p>
 		</div>
 		<div class="gradient">
 			<div class="flex-container">
