--- a/index.html
+++ b/index.html
@@ -42,15 +42,14 @@
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
 				<p>Venha jogar conosco, <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
-				<br /><p style="text-align:center"><b>Redes Sociais: </b> 
+			</div>
+			
+			<br /><p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
-	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
+	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discordlogo.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
-			
-			
-			</div>
 		</header>
 		<div class="main-content">
 			<h2>Sobre o <b>MEGACRAFT</b></h2>
