--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p>Venha jogar conosco, <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div>
 			
-			<br /><br /><p style="text-align:center; color: #191970"><b>Redes Sociais: </b> 
+			<br /><br /><p style="text-align:center; color: #ffffff"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
 	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discordlogo.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
