--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p>Venha jogar conosco, <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div>
 			
-			<br /><br /><p style="text-align:center; color: #ffffff"><b>Redes Sociais: </b> 
+			<br /><br /><p style="text-align:center; color: #ffffff"><b>Redes Sociais: </b> <br />
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
 	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discordlogo.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
@@ -101,24 +101,6 @@
 				</div>
 			</div>
 		</div>
-		<br /><br /><br /><br /><br />
-		<p style="text-align:center">
-		<span style="font-size:200%;font-weight:bold">Apoiadores!</span><br /><br />
-		Conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html" style="color: #191970">clicando aqui</a><br /><br />
-		<i><b><span style="font-size:120%">Seja um apoiador também</span><br />e nos ajude a manter o servidor de pé <a href="loja.html" style="color: #191970">clicando aqui</a>!</i></b><br />	
-		<img src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" width="250px" height="343px"/>	
-		</p><br /><br />
-<p style="text-align:center"><b>Redes Sociais: </b> 
-	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
-	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
-	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
-	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
-		</p>	
-		<br /><br /><br /><br /><br />
-		<p style="text-align:center">
-		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
-		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" style="color: #191970">Clique aqui</a>.</p>		
-		</cite>
 		<br /><br />
 		<p style="text-align:center"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
