--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<br /><br /><p style="text-align:center; color: #ffffff"><b>Redes Sociais: </b> <br />
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
-	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discordlogo.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
+	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discord2.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
 			
