--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 			<div class="flex-container">
 				<div class="split">
 					<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
-					<p>Entre para o nosso servidor do discord, tire as suas dúvidas, reporte bugs, veja as novidades, faça amigos, crie equipes, bata um papo com a galera e muito mais outras coisas, te esperamos!</p>
+					<p>Entre para o nosso servidor do discord!</p>
 					<br /><p><a href="https://discord.gg/JNRCCebDmB" style="color: #191970"  target="_blank">> CLIQUE AQUI</a></p>
 				</div>
 				<div class="split">
 					<a href="loja.html" ><img class="img" src="img/store.png" alt="Image of Store icon"></a>
-					<p>Aqui você pode doar para o servidor e em troca receber diversas recompensas como ranks, itens e outros benefícios. Sua ajuda é muito importante pois faz com que o servidor se mantenha online!</p>
+					<p>Sua ajuda é muito importante para manter o servidor online!</p>
 					<br /><p><a href="loja.html" style="color: #191970"  >> CLIQUE AQUI</a></p>
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Vote no servidor, leva somente uns minutinhos, ao votar você ajuda muito o servidor a crescer e ter mais jogadores, pois para mantermos o servidor online temos altos custos de manutenção.</p>
+					<p>Vote no servidor e receba prêmios em troca.</p>
 					<br /><p><a href="#vote-section" style="color: #191970" >> CLIQUE AQUI</a></p>
 				</div>
 			</div>
