--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 				</div>
 				<div class="split">
 					<a href="loja.html" ><img class="img" src="img/store.png" alt="Image of Store icon"></a>
-					<p>Sua ajuda é muito importante para manter o servidor online!</p>
+					<p>Sua ajuda é muito importante para nós!</p>
 					<br /><p><a href="loja.html" style="color: #191970"  >> CLIQUE AQUI</a></p>
 				</div>
 				<div class="split">
 					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Vote no servidor e receba prêmios em troca.</p>
+					<p>Vote no servidor e receba prêmios!</p>
 					<br /><p><a href="#vote-section" style="color: #191970" >> CLIQUE AQUI</a></p>
 				</div>
 			</div>
