--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</header>
 		<div class="main-content">
 			<h2>Sobre o <b>MEGACRAFT</b></h2>
-			<p class="about-text">Venha jogar minecraft no modo sobrevivência e com vários outros jogadores! Sobreviva, desafie, faça construções épicas, trabalhe, fique rico e muito mais!<br />
+			<p class="about-text">Venha jogar minecraft no modo sobrevivência e com vários outros jogadores! Sobreviva, desafie, faça construções épicas, crie maquinários incríveis, trabalhe, fique rico e muito mais!<br />
 			<br>Você pode entrar em nosso servidor com o IP <b><span class="ip">megacraftmc.com.br</span></b></p>
 		</div>
 		<div class="gradient">
