--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="equipe.html">Equipe</a></li>
-					<li><a href="loja.html" >Loja</a></li>
 					<li><a href="regras.html" >Regras</a></li>
+					<li><a href="votar.html">Votar</a></li>
+					<li><a href="loja.html" >Loja</a></li>
 					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
 				</ul>
 		</div>
@@ -41,7 +41,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>Venha jogar conosco, <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
+				<p>Venha jogar conosco, IP: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div>
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
@@ -51,7 +51,7 @@
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
 			
-		<p style="text-align:center; color:#ffffff"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
+		<p style="text-align:center; color:#ffffff"><small>Visitantes</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
 		<br />		
 			
