--- a/apoiadores.html
+++ b/apoiadores.html
@@ -28,9 +28,9 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="equipe.html">Equipe</a></li>
-					<li><a href="loja.html" >Loja</a></li>
 					<li><a href="regras.html" >Regras</a></li>
+					<li><a href="votar.html">Votar</a></li>
+					<li><a href="loja.html" >Loja</a></li>
 					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
 				</ul>
 			</div>
