--- a/votar.html
+++ b/votar.html
@@ -41,19 +41,37 @@
 					<h1 class="fade">Loja</h1>
 					<h2>Em breve!</h2>	
 				</div></div><br /><br />
-<div align="left">
-<p>
-EM BREVE AQUI OS PRODUTOS DA LOJA DO SERVIDOR
-</p>
-</div><br>
+		<div class="vote-section">
+			<h2 id="vote-section">Vote no servidor</h2>
+			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</p>
+			<div class="vote-container">
+				<div class="vote">
+					<h2>MinecraftServers.org</h2>
+					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>MinecraftList.org</h2>
+					<a href="https://minecraftlist.org/vote/25780" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>Minecraft-MP.com</h2>
+					<a href="https://minecraft-mp.com/server/294603/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>TopMinecraftServers.org</h2>
+					<a href="http://topminecraftservers.org/vote/12826"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>McCommunity.net</h2>
+					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+			</div>
+		</div>
 <br>
 </p>
-<br>
-<br>
-<br>
 <br>
 <span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
-<p><small><em>Escrito por TEKCRAFT. Última atualização em 22/09/20.</em></small></p>
+<p><small><em>Escrito por TEKBRS. Última atualização em 24/10/21.</em></small></p>
 <br /><br />
 <br /><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
