--- a/votar.html
+++ b/votar.html
@@ -38,12 +38,12 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Loja</h1>
-					<h2>Em breve!</h2>	
+					<h1 class="fade">Vote no servidor</h1>
+					<h3>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</h3>	
 				</div></div><br /><br />
 		<div class="vote-section">
-			<h2 id="vote-section">Vote no servidor</h2>
-			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</p>
+			<h2 id="vote-section"></h2>
+			<p></p>
 			<div class="vote-container">
 				<div class="vote">
 					<h2>MinecraftServers.org</h2>
