--- a/votar.html
+++ b/votar.html
@@ -37,12 +37,11 @@
 		</header>
 		<div class="main-content">
 			<div class="about-staff">
-				<div class="abt-epr">
-					<h1 class="fade">Vote no servidor</h1>
+				<div class="vote-section">
+					<h2 id="vote-section">Vote no servidor</h1></h2>
 					<h3>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</h3>	
 				</div></div><br /><br />
-		<div class="vote-section">
-			<h2 id="vote-section"></h2>
+			
 			<p></p>
 			<div class="vote-container">
 				<div class="vote">
@@ -68,11 +67,7 @@
 			</div>
 		</div>
 <br>
-</p>
 <br>
-<span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
-<p><small><em>Escrito por TEKBRS. Última atualização em 24/10/21.</em></small></p>
-<br /><br />
 <br /><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
