--- a/index.html
+++ b/index.html
@@ -56,62 +56,12 @@
 		<br />		
 			
 		</header>
-		<div class="main-content">
-			<h2>Sobre o <b>MEGACRAFT</b></h2>
-			<p class="about-text">Venha jogar minecraft no modo sobrevivência e com vários outros jogadores! Sobreviva, desafie, faça construções épicas, crie maquinários incríveis, trabalhe, fique rico e muito mais!<br />
-			<br>Você pode entrar em nosso servidor com o IP <b><span class="ip">megacraftmc.com.br</span></b></p>
-		</div>
-		<div class="gradient">
-			<div class="flex-container">
-				<div class="split">
-					<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img class="img" src="img/forums.png" alt="Image of Forums icon"></a>
-					<p>Entre para o nosso servidor do discord!</p>
-					<br /><p><a href="https://discord.gg/JNRCCebDmB" style="color: #191970"  target="_blank">> CLIQUE AQUI</a></p>
-				</div>
-				<div class="split">
-					<a href="loja.html" ><img class="img" src="img/store.png" alt="Image of Store icon"></a>
-					<p>Sua ajuda é muito importante para nós!</p>
-					<br /><p><a href="loja.html" style="color: #191970"  >> CLIQUE AQUI</a></p>
-				</div>
-				<div class="split">
-					<a href="#vote-section"><img class="img" src="img/vote.png" alt="Image of Voting icon"></a>
-					<p>Vote no servidor e receba prêmios!</p>
-					<br /><p><a href="#vote-section" style="color: #191970" >> CLIQUE AQUI</a></p>
-				</div>
-			</div>
-		</div>
-		<div class="vote-section">
-			<h2 id="vote-section">Vote no servidor</h2>
-			<p>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</p>
-			<div class="vote-container">
-				<div class="vote">
-					<h2>MinecraftServers.org</h2>
-					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
-				</div>
-				<div class="vote">
-					<h2>MinecraftList.org</h2>
-					<a href="https://minecraftlist.org/vote/25780" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
-				</div>
-				<div class="vote">
-					<h2>Minecraft-MP.com</h2>
-					<a href="https://minecraft-mp.com/server/294603/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
-				</div>
-				<div class="vote">
-					<h2>TopMinecraftServers.org</h2>
-					<a href="http://topminecraftservers.org/vote/12826"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
-				</div>
-				<div class="vote">
-					<h2>McCommunity.net</h2>
-					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
-				</div>
-			</div>
-		</div>
-		<br /><br />
+
 
 		<footer>
-			<p>Copyright &copy; 2020 MegaCraft</p>
+			<p>Copyright &copy; MegaCraft 2021</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
