--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			
 		<p style="text-align:center; color:#ffffff"><small>Visitantes</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
-		<br />		
-		<p style="text-align:center; color:#ffffff">Copyright © MegaCraft 2021 - Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+		<br />	<br />	<br />		
+		<p style="text-align:center; color:#ffffff">Copyright © 2021 MegaCraft - Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</header>
 
 	</div>
