--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>Venha jogar conosco, IP: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
+				<p>Venha jogar conosco, <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div>
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
