--- a/apoiadores.html
+++ b/apoiadores.html
@@ -31,7 +31,7 @@
 					<li><a href="regras.html" >Regras</a></li>
 					<li><a href="votar.html">Votar</a></li>
 					<li><a href="loja.html" >Loja</a></li>
-					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
+					<li><a href="suporte.html" >Suporte</a></li>
 				</ul>
 			</div>
 		</header>
@@ -156,9 +156,9 @@
 		</div>
 
 		<footer>
-			<p>Copyright &copy; MegaCraft 2020</p>
+			<p>Copyright &copy; MegaCraft 2021</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 
 	</div>
