--- a/suporte.html
+++ b/suporte.html
@@ -4,7 +4,7 @@
 	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Regras">
+	<meta property="og:title" content="Mega Craft - Suporte">
 	<meta property="og:site_name" content="Mega Craft">
 	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
@@ -38,12 +38,12 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Loja</h1>
+					<h1 class="fade">Suporte</h1>
 					<h2>Em breve!</h2>	
 				</div></div><br /><br />
 <div align="left">
 <p>
-EM BREVE AQUI OS PRODUTOS DA LOJA DO SERVIDOR
+EM BREVE AQUI AREA DE SUPORTE DO SERVIDOR
 </p>
 </div><br>
 <br>
