--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li><a href="regras.html" >Regras</a></li>
 					<li><a href="votar.html">Votar</a></li>
 					<li><a href="loja.html" >Loja</a></li>
-					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
+					<li><a href="suporte.html" >Suporte</a></li>
 				</ul>
 		</div>
 			<h1 class="animate">ESTAMOS DE VOLTA! \0/</h1>
