--- a/suporte.html
+++ b/suporte.html
@@ -31,7 +31,7 @@
 					<li><a href="regras.html" >Regras</a></li>
 					<li><a href="votar.html">Votar</a></li>
 					<li><a href="loja.html" >Loja</a></li>
-					<li><a href="https://discord.gg/JNRCCebDmB" target="_blank">Suporte</a></li>
+					<li><a href="suporte.html" >Suporte</a></li>
 				</ul>
 			</div>
 		</header>
