--- a/votar.html
+++ b/votar.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-	<title>Mega Craft - Loja</title>
-	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
-	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
+	<title>Mega Craft - Votar</title>
+	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
+	<meta name="keywords" content="MegaCraft, MegaCraftMC.com.br, Minecraft Server, Minecraft, Game, SlimeFun, Play, Towny, MCMMO, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Regras">
+	<meta property="og:title" content="Mega Craft - Votar">
 	<meta property="og:site_name" content="Mega Craft">
 	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
