--- a/equipe.html
+++ b/equipe.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>Mega Craft - Equipe</title>
-	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'jogar.megacraft.com.br'.">
-	<meta name="keywords" content="MegaCraft, MegaCraft.com.br, Minecraft Server, Minecraft, Game, Fun, Play, Info, Website, Oficial">
+	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
+	<meta name="keywords" content="MegaCraft, MegaCraftMC.com.br, Minecraft Server, Minecraft, Game, SlimeFun, Play, Towny, MCMMO, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Mega Craft - Equipe">
 	<meta property="og:site_name" content="Mega Craft">
