--- a/cores.html
+++ b/cores.html
@@ -43,13 +43,148 @@
 				</div></div><br /><br />
 <div align="left">
 <p>
-EM BREVE AQUI OS PRODUTOS DA LOJA DO SERVIDOR
-</p>
-</div><br>
-<br>
-</p>
-<br>
-<br>
+Minecraft Códigos e Formatos das Cores</p>
+<div>
+<h1></h1>
+<p>No Minecraft, há uma série de códigos de cores e códigos de formato integrados que você pode usar em comandos de bate-papo, tags e muito mais.</p>
+<p>Os códigos de cores podem ser usados para alterar a cor do texto no jogo, atribuir as cores da equipe e personalizar a cor da armadura de couro tingido. Os códigos de formato podem ser usados para modificar a aparência do texto do jogo, como <strong>bold</strong> or <em>italic</em>.</p>
+<div class="row">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-6">
+<h2>Çista de Cores e Códigos</h2>
+<p>Aqui está a lista de cores que estão disponíveis no Minecraft:</p>
+<table class="std_table std_table_full">
+<tr>
+<th>Cor<br><em>(Minecraft Name)</em></th>
+<th>Chat Code</th>
+<th>MOTD Code</th>
+<th>Decimal</th>
+<th class="hidden-xs">Hexadecimal</th>
+</tr>
+<tr style="background:#aa0000;color:#fafafa;">
+<td>Dark Red<br>(<em>dark_red)</em></td>
+<td>&#x00A7;4</td>
+<td>\u00A74</td>
+<td>11141120</td>
+<td class="hidden-xs">AA0000</td>
+</tr>
+<tr style="background:#ff5555;color:#fafafa;">
+<td>Red<br>(<em>red)</em></td>
+<td>&#x00A7;c</td>
+<td>\u00A7c</td>
+<td>16733525</td>
+<td class="hidden-xs">FF5555</td>
+</tr>
+<tr style="background:#ffaa00;color:black;">
+<td>Gold<br>(<em>gold)</em></td>
+<td>&#x00A7;6</td>
+<td>\u00A76</td>
+<td>16755200</td>
+<td class="hidden-xs">FFAA00</td>
+</tr>
+<tr style="background:#ffff55;color:black;">
+<td>Yellow<br>(<em>yellow)</em></td>
+<td>&#x00A7;e</td>
+<td>\u00A7e</td>
+<td>16777045</td>
+<td class="hidden-xs">FFFF55</td>
+</tr>
+<tr style="background:#00aa00;color:#fafafa;">
+<td>Dark Green<br>(<em>dark_green)</em></td>
+<td>&#x00A7;2</td>
+<td>\u00A72</td>
+<td>43520</td>
+<td class="hidden-xs">00AA00</td>
+</tr>
+<tr style="background:#55ff55;color:black;">
+<td>Green<br>(<em>green)</em></td>
+<td>&#x00A7;a</td>
+<td>\u00A7a</td>
+<td>5635925</td>
+<td class="hidden-xs">55FF55</td>
+</tr>
+<tr style="background:#55ffff;color:black;">
+<td>Aqua<br>(<em>aqua)</em></td>
+<td>&#x00A7;b</td>
+<td>\u00A7b</td>
+<td>5636095</td>
+<td class="hidden-xs">55FFFF</td>
+</tr>
+<tr style="background:#00aaaa;color:#fafafa;">
+<td>Dark Aqua<br>(<em>dark_aqua)</em></td>
+<td>&#x00A7;3</td>
+<td>\u00A73</td>
+<td>43690</td>
+<td class="hidden-xs">00AAAA</td>
+</tr>
+<tr style="background:#0000aa;color:#fafafa;">
+<td>Dark Blue<br>(<em>dark_blue)</em></td>
+<td>&#x00A7;1</td>
+<td>\u00A71</td>
+<td>170</td>
+<td class="hidden-xs">0000AA</td>
+</tr>
+<tr style="background:#5555ff;color:#fafafa;">
+<td>Blue<br>(<em>blue)</em></td>
+<td>&#x00A7;9</td>
+<td>\u00A79</td>
+<td>5592575</td>
+<td class="hidden-xs">5555FF</td>
+</tr>
+<tr style="background:#ff55ff;color:#fafafa;">
+<td>Light Purple<br>(<em>light_purple)</em></td>
+<td>&#x00A7;d</td>
+<td>\u00A7d</td>
+<td>16733695</td>
+<td class="hidden-xs">FF55FF</td>
+</tr>
+<tr style="background:#aa00aa;color:#fafafa;">
+<td>Dark Purple<br>(<em>dark_purple)</em></td>
+<td>&#x00A7;5</td>
+<td>\u00A75</td>
+<td>11141290</td>
+<td class="hidden-xs">AA00AA</td>
+</tr>
+<tr style="background:#ffffff;color:black;">
+<td>White<br>(<em>white)</em></td>
+<td>&#x00A7;f</td>
+<td>\u00A7f</td>
+<td>16777215</td>
+<td class="hidden-xs">FFFFFF</td>
+</tr>
+<tr style="background:#aaaaaa;color:black;">
+<td>Gray<br>(<em>gray)</em></td>
+<td>&#x00A7;7</td>
+<td>\u00A77</td>
+<td>11184810</td>
+<td class="hidden-xs">AAAAAA</td>
+</tr>
+<tr style="background:#555555;color:#fafafa;">
+<td>Dark Gray<br>(<em>dark_gray)</em></td>
+<td>&#x00A7;8</td>
+<td>\u00A78</td>
+<td>5592405</td>
+<td class="hidden-xs">555555</td>
+</tr>
+<tr style="background:#000000;color:#fafafa;">
+<td>Black<br>(<em>black)</em></td>
+<td>&#x00A7;0</td>
+<td>\u00A70</td>
+<td>0</td>
+<td class="hidden-xs">000000</td>
+</tr>
+</table>
+<div class="definitions small hidden-xs">
+<h4>Definitions</h4>
+<ul>
+<li><strong>Color</strong> is the color name and (<strong><em>Minecraft Name</em></strong>) is the internal name for the color in Minecraft.</li>
+<li><strong>Chat Code</strong> is the internal code for the chat color in Minecraft.</li>
+<li><strong>MOTD Code</strong> is the internal code for the &quot;<em>Message Of The Day</em>&quot; color in Minecraft.</li>
+<li><strong>Decimal</strong> is the internal decimal value for the color in Minecraft.</li>
+<li><strong>Hexadecimal</strong> is the internal hexadecimal value for the color in Minecraft.</li>
+</ul>
+</div>
+</div>	
+	
 <br>
 <br>
 <span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
