--- a/cores.html
+++ b/cores.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-	<title>Mega Craft - Loja</title>
+	<title>Mega Craft - Tabela de Cores</title>
 	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
 	<meta name="keywords" content="MegaCraft, MegaCraftMC.com.br, Minecraft Server, Minecraft, Game, SlimeFun, Play, Towny, MCMMO, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Loja">
+	<meta property="og:title" content="Mega Craft - Tabela de Cores">
 	<meta property="og:site_name" content="Mega Craft">
 	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
@@ -38,12 +38,10 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Loja</h1>
-					<h2>Em breve!</h2>	
+					<h1 class="fade">Tabela de Cores</h1>
+					<h2>Minecraft Códigos e Formatos das Cores!</h2>	
 				</div></div><br /><br />
 <div align="left">
-<p>
-Minecraft Códigos e Formatos das Cores</p>
 <div>
 <h1></h1>
 <p>No Minecraft, há uma série de códigos de cores e códigos de formato integrados que você pode usar em comandos de bate-papo, tags e muito mais.</p>
@@ -185,11 +183,6 @@ Minecraft Códigos e Formatos das Cores</p>
 </div>
 </div>	
 	
-<br>
-<br>
-<span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
-<p><small><em>Escrito por TEKCRAFT. Última atualização em 22/09/20.</em></small></p>
-<br /><br />
 <br /><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
