--- a/cores.html
+++ b/cores.html
@@ -43,13 +43,13 @@
 				</div></div><br /><br />
 <div align="left">
 <div>
-<h1></h1>
 <p>No Minecraft, há uma série de códigos de cores e códigos de formato integrados que você pode usar em comandos de bate-papo, tags e muito mais.</p>
 <p>Os códigos de cores podem ser usados para alterar a cor do texto no jogo, atribuir as cores da equipe e personalizar a cor da armadura de couro tingido. Os códigos de formato podem ser usados para modificar a aparência do texto do jogo, como <strong>bold</strong> or <em>italic</em>.</p>
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6">
-<h2>Çista de Cores e Códigos</h2>
+<h2>Lista de Cores e Códigos</h2>
 <p>Aqui está a lista de cores que estão disponíveis no Minecraft:</p>
+<br />	
 <table class="std_table std_table_full">
 <tr>
 <th>Cor<br><em>(Minecraft Name)</em></th>
