--- a/cores.html
+++ b/cores.html
@@ -172,13 +172,13 @@
 </tr>
 </table>
 <div class="definitions small hidden-xs">
-<h4>Definitions</h4>
+<h4>Definições</h4>
 <ul>
-<li><strong>Color</strong> is the color name and (<strong><em>Minecraft Name</em></strong>) is the internal name for the color in Minecraft.</li>
-<li><strong>Chat Code</strong> is the internal code for the chat color in Minecraft.</li>
-<li><strong>MOTD Code</strong> is the internal code for the &quot;<em>Message Of The Day</em>&quot; color in Minecraft.</li>
-<li><strong>Decimal</strong> is the internal decimal value for the color in Minecraft.</li>
-<li><strong>Hexadecimal</strong> is the internal hexadecimal value for the color in Minecraft.</li>
+<li><strong>Cor</strong> é o nome da cor (<strong><em>Minecraft Name</em></strong>) é o nome interno para a cor no Minecraft.</li>
+<li><strong>Chat Code</strong> é o nome interno para a cor no chat do Minecraft.</li>
+<li><strong>MOTD Code</strong> é o código interno para a &quot;<em>Mensagem do dia</em>&quot; cor no Minecraft.</li>
+<li><strong>Decimal</strong> é o valor Decimal para o código da cor no Minecraft.</li>
+<li><strong>Hexadecimal</strong> é o valor Hexadecimal para o código da cor no Minecraft.</li>
 </ul>
 </div>
 </div>	
