--- a/equipe.html
+++ b/equipe.html
@@ -40,7 +40,7 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Nossa Equipe</h1>
-					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é HARDTEKBRS (TEKCRAFT). Toda a equipe se dedica constantemente a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "<b><span class="ip">jogar.megacraft.com.br</span></b>".</p>
+					<p>A equipe do MegaCraft é profissional e pronta para lhe dar a melhor experiência em nosso servidor. O dono é (TEKCRAFT). Toda a equipe se dedica constantemente a oferecer a você o melhor tempo possível no servidor. O proprietário trabalha em estreita colaboração com o resto da equipe de funcionários. Você vai nos ver online e pode entrar com o IP "<b><span class="ip">megacraftmc.com.br</span></b>".</p>
 				</div>
 				<div class="prev-epr">
 					<h2>Nossas Habilidades</h2>
@@ -78,9 +78,9 @@
 
 
 					<div>
-						<h3>ZackYTSwift</h3>
+						<h3>PORKALYPSE</h3>
 						<div class="manager">Moderador</div>
-						<img src="img/zack.png"  width="200px" height="400px">
+						<img src="img/pork.png" width="200px" height="400px">
 					</div>
 
 					<div>
@@ -90,13 +90,13 @@
 					</div>
 
 					<div>
-						<h3>Ghost1611</h3>
+						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
-						<h3>Foulg</h3>
+						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
