--- a/equipe.html
+++ b/equipe.html
@@ -84,9 +84,9 @@
 					</div>
 
 					<div>
-						<h3>PORKALYPSE</h3>
+						<h3>INDISPONÍVEL</h3>
 						<div class="manager">Moderador</div>
-						<img src="img/pork.png" width="200px" height="400px">
+						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
