--- a/equipe.html
+++ b/equipe.html
@@ -71,7 +71,7 @@
 				<h2>Nosso Time</h2>
 				<div class="staff-team">
 					<div>
-						<h3>HARDTEKBRS (TEK)</h3>
+						<h3>TEKBRS</h3>
 						<div class="owner">Dono</div>
 						<img src="img/tek.png"  width="200px" height="400px">
 					</div>
