--- a/regras.html
+++ b/regras.html
@@ -95,7 +95,7 @@
 <br>
 <br>
 <span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
-<p><small><em>Escrito por TEKCRAFT. Última atualização em 22/09/20.</em></small></p>
+<p><small><em>Escrito por TEKBRS. Última atualização em 25/10/21.</em></small></p>
 <br /><br />
 <br /><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
